Spacing issues

--- a/src/components/paradox/results/personality/career/container/style.scss
+++ b/src/components/paradox/results/personality/career/container/style.scss
@@ -4,6 +4,7 @@
   @extend %container;
 
   @include min-width(lg) {
+    align-items: flex-start;
     display: flex;
     gap: $buffer-lg;
   }
